<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/noteLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/note_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/title_hint"
                android:imeOptions="flagNoExtractUi"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/note_image_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/image_url_hint"
                android:imeOptions="flagNoExtractUi"
                android:importantForAutofill="no"
                android:inputType="textMultiLine|textUri"
                android:maxLines="2" />

            <EditText
                android:id="@+id/note_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/body_hint"
                android:imeOptions="flagNoExtractUi"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
              />
        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/note_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/add_note"
        android:src="@android:drawable/ic_menu_save"
        app:fabSize="normal"
        app:layout_anchor="@id/noteLayout"
        app:layout_anchorGravity="bottom|right|end" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>